# pybi-next

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: main.yml  ruff-check.yml
__tests/: conftest.py  screen.py
__tests/testing_web/: conftest.py  context.py  memory_db.py  server.py  test_data_by_duckdb.py  test_data_column.py  test_data_view.py  test_query.py  test_select.py  utils.py
__tests/utils/: __init__.py  display.py  grid_cell.py  list_box.py  select.py  table.py
examples/: base.py
examples/templates/: __init__.py  _bar.py  _line.py  _pie.py  bar.py
npm-store/: package.json  pnpm-lock.yaml  vite.config.ts
npm-store/src/: data_view_store.ts
src/pybi/: __init__.py  _setup.py  version.py
src/pybi/components/: echarts.py  input.py  radio.py  select.py  table.py
src/pybi/dev/: __init__.py  _filters.py  _query_map.py
src/pybi/link_sql/: __init__.py  _base.py  _const.py  _duckdb.py  _mixin.py  _server_query.py  _types.py  _utils.py  data_column.py  data_set_store.py  data_source.js  data_table.py  data_view.py  data_view_store.js  data_view_store.py  duckdb_dataset.py  duckdb_utils.py  facade.py  models.py  protocols.py  query.py  sql.py  sql_stem.py
src/pybi/link_sql/static/: group_fn.js
src/pybi/systems/: graph_system.py  lazy_system.py
