[project]
name = "pybi-next"
version = "1.0.0"
description = "pybi-next is effortless BI Data Visualization Reports with Python."
keywords = ["ui", "gui", "web", "visualization", "reporting", "data-analysis"]
Repository = "https://github.com/CrystalWindSnake/pybi-next"
Issues = "https://github.com/CrystalWindSnake/pybi-next/issues"
license = "MIT"
readme = "README.md"
authors = [
    { name = "CrystalWindSnake", email = "568166495@qq.com" }
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "instaui>=0.2.1",
]

[dependency-groups]
dev = [
    "instaui[web]",
    "duckdb>=1.2.2",
    "pandas >= 1.3.4, <2.2.3 ; python_version < '3.9'",
    "pandas >= 2.2.3 ; python_version >= '3.9'",
    "instaui-echarts>=0.1.0",
    "playwright==1.47.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright==0.5.2",
]
lint = [
    "ruff>=0.11.8",
]
git = [
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
web = ["instaui[web]","duckdb>=1.2.2"]
webview = ["instaui[webview]"]
all = ["instaui[all]"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/pybi"]

[tool.hatch.build.targets.sdist]
only-include = ["src/pybi"]

